Readjusting contact logic

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
           <div class="contact-form">
             <h3>Send Us a Message</h3>
             <form id="contactForm" name="contact" netlify netlify-honeypot="bot-field">
+              <input type="hidden" name="form-name" value="contact" />
               <!-- Hidden honeypot field for spam protection -->
               <p style="display: none;">
                 <label>Don't fill this out if you're human: <input name="bot-field" /></label>
